@@ -10,6 +10,8 @@
   - Worked around the mounting issue with LaunchBox,
     by allowing a mounting command-line with single
     quotes like MOUNT C 'X:\DOS' on Windows. (Wengier)
+  - Unmounting ISO drives will auto-unmount associated
+    El Torito floppy drives (if any) too. (Wengier)
   - Updated xxHash library by Yann Collet from 0.7.4
     to the stable version 0.8.0. (Wengier)
   - Added "Quick launch program..." menu (under "DOS")
